tests/miniJava/neg/006177_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { String System.out.println ( { } ) ; } }
